{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 29,
  "lineage": "2efb2d8d-7c9e-2c27-9c13-959ed9b928f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0486f5f6bb9591a0d",
            "arn": "arn:aws:ec2:ca-central-1:513851927689:elastic-ip/eipalloc-0486f5f6bb9591a0d",
            "association_id": "eipassoc-04fadaa8495bfc0b3",
            "domain": "vpc",
            "id": "eipalloc-0486f5f6bb9591a0d",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-00130eed4eb3e7d39",
            "private_dns": "ip-10-0-5-219.ca-central-1.compute.internal",
            "private_ip": "10.0.5.219",
            "public_dns": "ec2-3-97-240-52.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.240.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tfassignment-nat"
            },
            "tags_all": {
              "Name": "tfassignment-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:internet-gateway/igw-0c7cbb2447b314406",
            "id": "igw-0c7cbb2447b314406",
            "owner_id": "513851927689",
            "tags": {
              "Name": "tfassignment-igw"
            },
            "tags_all": {
              "Name": "tfassignment-igw"
            },
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0486f5f6bb9591a0d",
            "association_id": "eipassoc-04fadaa8495bfc0b3",
            "connectivity_type": "public",
            "id": "nat-0647f21686896b17b",
            "network_interface_id": "eni-00130eed4eb3e7d39",
            "private_ip": "10.0.5.219",
            "public_ip": "3.97.240.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aa7384da602f305f",
            "tags": {
              "name": "tfassignment-nat"
            },
            "tags_all": {
              "name": "tfassignment-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_ca_central_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:route-table/rtb-0d2306e09b35c62cb",
            "id": "rtb-0d2306e09b35c62cb",
            "owner_id": "513851927689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0647f21686896b17b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_ca_central_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:route-table/rtb-0b0aa7705d47120b2",
            "id": "rtb-0b0aa7705d47120b2",
            "owner_id": "513851927689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7cbb2447b314406",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-df-public"
            },
            "tags_all": {
              "Name": "Dev-df-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ca_central_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296f39532e7f2bf9",
            "route_table_id": "rtb-0d2306e09b35c62cb",
            "subnet_id": "subnet-0d373d139bcc95d45"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_ca_central_1a",
            "aws_subnet.public_ca_central_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ca_central_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021a474f8936ae26f",
            "route_table_id": "rtb-0d2306e09b35c62cb",
            "subnet_id": "subnet-0a8756a9eee08fca2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_ca_central_1b",
            "aws_subnet.public_ca_central_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ca_central_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97b26d39a933f2e",
            "route_table_id": "rtb-0b0aa7705d47120b2",
            "subnet_id": "subnet-0aa7384da602f305f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_ca_central_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ca_central_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a95aa2ceee0e8237",
            "route_table_id": "rtb-0b0aa7705d47120b2",
            "subnet_id": "subnet-0c5d7325ea801ec73"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_ca_central_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_assignment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:security-group/sg-0852862c60a12162b",
            "description": "assignment",
            "egress": [],
            "id": "sg-0852862c60a12162b",
            "ingress": [],
            "name": "assignment",
            "name_prefix": "",
            "owner_id": "513851927689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "assignment"
            },
            "tags_all": {
              "Name": "assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ca_central_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:subnet/subnet-0d373d139bcc95d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d373d139bcc95d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513851927689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_ca_central_1a"
            },
            "tags_all": {
              "Name": "private_ca_central_1a"
            },
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ca_central_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:subnet/subnet-0a8756a9eee08fca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8756a9eee08fca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513851927689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_ca_central_1b"
            },
            "tags_all": {
              "Name": "private_ca_central_1b"
            },
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_ca_central_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:subnet/subnet-0aa7384da602f305f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa7384da602f305f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513851927689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_ca_central_1a"
            },
            "tags_all": {
              "Name": "public_ca_central_1a"
            },
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_ca_central_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:subnet/subnet-0c5d7325ea801ec73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5d7325ea801ec73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513851927689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_ca_central_1b"
            },
            "tags_all": {
              "Name": "public_ca_central_1b"
            },
            "vpc_id": "vpc-07c05619c4684c133"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:513851927689:vpc/vpc-07c05619c4684c133",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee0de5167607672f",
            "default_route_table_id": "rtb-0b8d707b1969a43d8",
            "default_security_group_id": "sg-0ec4e3d602a1c063b",
            "dhcp_options_id": "dopt-0dd055e0ad61c0888",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c05619c4684c133",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8d707b1969a43d8",
            "owner_id": "513851927689",
            "tags": {
              "Name": "tf-assignment"
            },
            "tags_all": {
              "Name": "tf-assignment"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06396c79efa907b53",
            "arn": "arn:aws:ec2:ca-central-1:513851927689:instance/i-0fdbf1aaacde03b16",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdbf1aaacde03b16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042a0478250f3d0c0",
            "private_dns": "ip-10-0-1-35.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a406965caa992c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d373d139bcc95d45",
            "tags": {
              "Environment": "dev",
              "Name": "tf-assignment",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-assignment",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "tf-assignment"
            },
            "vpc_security_group_ids": [
              "sg-0852862c60a12162b"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    }
  ]
}